
-----------------------------
lambkit-1.0.4:

新增：新增Auth插件实现的Api路由的用户和权限控制
新增：新增Api路由的用户和权限控制接口
新增：新增CallBack方面事件回调
优化：优化ApiJwtAuthInterceptor，Auth无参数注解默认为登陆用户才能访问。
优化：优化Mgedb功能，提供多mgrdb服务管理能力
优化：LambkitModule加入registerEngine，registerRequestMapping注册函数，方便注解的注册
优化：数据库连接池增加连接数配置，可增加并发配置能力
优化：移除meta模块
优化：MetaBuilder支持生成VIEW视图信息
优化：LambkitController增加isPOST、isGET判断
优化：优化NodeManager初始化效率
修复：修复mgedb移除meta后的注册问题

-----------------------------
lambkit-1.0.3:

新增：新增LambkitRenderFactory,可动态确定render模板，应用于cms的模板管理中
新增：新增ShiroRedisSessionDAO
新增：Api网关支持时间格式为yyyy-MM-dd HH:mm:ss
优化：优化数据库密码加密解密，用户可自定义算法。用户可采用继承LambkitPasswordCracker进行加密解密，默认解密方式时，当密码小于24位时使用明码。
优化：优化AuthService登录接口
优化：LambkitApplication可通过args配置，取消shiro的支持。
优化：修改ATTR_TEMPLATE_PATH变量为TPATH
优化：DbManager增加db和dialect获取接口
优化：Columns加入参数值获取接口
优化：优化MetaTable获取primaryKey方法
优化：IField增加getAttrName方法，返回驼峰命名的字段名称，配合json序列化方法
优化：LambkitValidator默认改为返回json
优化：去除JspRender
修复：修复order by查询中Dialect处理错误
修复：修复MetaFileCatalogService文件夹用户权限
修复：修复mail插件缺少jar包问题

-----------------------------
lambkit-1.0.2:

新增：新增undertow-websocket支持，默认加入DefaultWebSocketServer，地址/websocket
新增：SecurityUtils新增AES加密解密
新增：数据库密码加密
新增：新增ApiRoute路由，可直接发布service中的方法
新增：新增Dubbo实现的RPC功能
新增：集成zookeeper和consul服务注册和发现功能
新增：ApiRoute新增拦截器ApiInterceptor、验证器ApiValidator
新增：ApiRoute新增ApiRender渲染器，可自定义输出方式
新增：新增ApiRoute测试代码
新增：ApiRoute增加ApiMapping重名错误抛出
优化：增强LambkitCache能力，增加list、set方式的缓存
优化：更改Upms缓存方式，可选择LambkitCache和Redis两种方式
优化：优化CommonUtils工具
优化：移除module中的Lms、Upms，精简lambkit
优化：移除shiro.ini中关于upms的配置
优化：升级JFinal到4.7
优化：ehcache升级到2.6.11
优化：优化网关服务GatewayService
优化：ApiRoute统一返回接口格式
优化：ApiValidator验证器通过key直接验证params参数，通过index验证method参数值
优化：mgrdb支持PostgreSQL大写字段
优化：优化Example的join语句
修复：修复generator模板地址错误问题
修复：修复LambkitApplication.run使用错误问题
修复：去除com.beust.jcommander.internal包的引用
修复：修复ApiRoute调用时ApiStore未装载完成的错误
修复：修复ApiRoute运行method方法
修复：修复ApiRenderJson输出null值

-----------------------------
lambkit-1.0.1：

优化：调整部分关键类的命名，增加Lambkit前缀
优化：LambkitService增加方法
优化：JFinal模板基类完善